<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.view.LoginFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:title="@string/app_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Theme.Foods.TextInputLayout"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/Theme.Foods.TextInputEditText"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Theme.Foods.TextInputLayout"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/Theme.Foods.TextInputEditText"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_log_in"
            style="@style/Theme.Foods.ActionButton"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

        <View
            android:id="@+id/separator_left"
            style="@style/Theme.Foods.SeparatorView"
            app:layout_constraintBottom_toTopOf="@id/btn_register"
            app:layout_constraintEnd_toStartOf="@id/tv_or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_log_in" />

        <TextView
            android:id="@+id/tv_or"
            style="@style/Theme.Foods.SeparatorText"
            android:text="@string/or"
            app:layout_constraintBottom_toTopOf="@id/btn_register"
            app:layout_constraintEnd_toStartOf="@id/separator_right"
            app:layout_constraintStart_toEndOf="@id/separator_left"
            app:layout_constraintTop_toBottomOf="@id/btn_log_in" />

        <View
            android:id="@+id/separator_right"
            style="@style/Theme.Foods.SeparatorView"
            app:layout_constraintBottom_toTopOf="@id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_or"
            app:layout_constraintTop_toBottomOf="@+id/btn_log_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/Theme.Foods.CancelButton"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_or" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>